--- a/Catalogue.html
+++ b/Catalogue.html
@@ -21,7 +21,7 @@
         </header>
 
         <section id="image-container">
-            <img id="img1" src="Imagenes/Library.jpg" alt="Library">
+            <img id="img1" src="Library.jpg" alt="Library">
             <p id="TextBox">KIT502-WEB DEVELOPMENT</p> <br>
         </section>
 
